# haruspex

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  crates.js  help.html  ida-plugin-stub.py  ida-plugin.json  search-index.js  settings.html  src-files.js
anyhow/: all.html  index.html  struct.Chain.html  struct.Error.html  trait.Context.html
aquamarine/: all.html  attr.aquamarine.html  index.html
autocxx/: all.html  fn.as_copy.html  fn.as_mov.html  fn.as_new.html  index.html  macro.block.html  macro.block_constructors.html  macro.concrete.html  macro.exclude_impls.html  macro.exclude_utilities.html  macro.extern_cpp_opaque_type.html  macro.extern_cpp_type.html  macro.extern_rust_type.html  macro.generate.html  macro.generate_all.html  macro.generate_ns.html  macro.generate_pod.html  macro.include.html  macro.include_cpp.html  macro.instantiable.html  macro.name.html  macro.pod.html  macro.rust_type.html  macro.safety.html  macro.subclass.html  struct.BindingGenerationFailure.html  struct.CppMutRef.html  struct.CppPin.html  struct.CppRef.html  struct.CppUniquePtrPin.html  struct.c_char16_t.html  struct.c_int.html  struct.c_long.html  struct.c_longlong.html  struct.c_short.html  struct.c_uchar.html  struct.c_uint.html  struct.c_ulong.html  struct.c_ulonglong.html  struct.c_ushort.html  (+10 more)
autocxx_macro/: all.html  attr.cpp_semantics.html  attr.extern_rust_function.html  attr.extern_rust_type.html  attr.subclass.html  index.html  macro.include_cpp_impl.html
autocxx_parser/: all.html  enum.AllowlistEntry.html  enum.MultiBindingsErr.html  enum.UnsafePolicy.html  index.html  struct.ExternCppType.html  struct.IncludeCpp.html  struct.IncludeCppConfig.html  struct.MultiBindings.html  struct.RustFun.html  struct.RustPath.html  struct.Subclass.html  struct.SubclassAttrs.html
bitflags/: all.html  index.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
cxx/: all.html  attr.bridge.html  index.html  macro.chars.html  macro.let_cxx_string.html  macro.type_id.html  struct.CxxString.html  struct.CxxVector.html  struct.Exception.html  struct.SharedPtr.html  struct.UniquePtr.html  struct.WeakPtr.html  struct.void.html  trait.ExternType.html  type.String.html  type.Vector.html
cxxbridge_macro/: all.html  attr.bridge.html  index.html
foldhash/: all.html  index.html  struct.SharedSeed.html  trait.HashMapExt.html  trait.HashSetExt.html  type.HashMap.html  type.HashSet.html
haruspex/: all.html  enum.HaruspexError.html  fn.decompile_to_file.html  fn.output_path_for_function.html  fn.prepare_output_dir.html  fn.run.html  fn.sanitize_filename.html  index.html  sidebar-items.js  static.COUNTER.html
hashbrown/: all.html  index.html  sidebar-items.js  struct.HashMap.html  struct.HashSet.html
idalib/: all.html  enum.IDAError.html  fn.enable_console_messages.html  fn.force_batch_mode.html  fn.init_library.html  fn.prepare_library.html  fn.version.html  index.html  sidebar-items.js  static.INIT.html  static.batch.html  struct.AddressFlags.html  struct.IDAVersion.html  type.Address.html  type.IDARuntimeHandle.html
idalib_sys/: all.html  constant.BADADDR.html  enum.IDAError.html  fn.from_ea.html  fn.into_ea.html  index.html  sidebar-items.js  struct.range_t.html  type.ea_t.html
indexmap/: all.html  index.html  sidebar-items.js  struct.Bucket.html  struct.HashValue.html  trait.Entries.html  trait.Equivalent.html
itoa/: all.html  constant.DEC_DIGITS_LUT.html  constant.I128_MAX_LEN.html  constant.I16_MAX_LEN.html  constant.I32_MAX_LEN.html  constant.I64_MAX_LEN.html  constant.I8_MAX_LEN.html  index.html  (+9 more)
(+51088 files in other folders)
