[package]
name = "haruspex"
version = "0.1.0"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2021"
description = "TODO"
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/haruspex"
documentation = "https://0xdeadbeef.info/haruspex/haruspex/"
license = "MIT"
keywords = ["TODO", "windows", "redteaming", "exploitation"]
categories = ["command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", "tests/*"]

[dependencies]

# [build-dependencies]

# [[test]]
# name = "tests"
# path = "tests/main.rs"
# harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# missing_errors_doc = "allow"
# doc_markdown = "allow"
# wildcard_imports = "allow"

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
strip = true
# opt-level = "z"
lto = true
# codegen-units = 1
panic = "abort"
