[package]
name = "haruspex"
version = "0.5.1"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Vulnerability research assistant that extracts pseudo-code from IDA Hex-Rays decompiler."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/haruspex"
documentation = "https://0xdeadbeef.info/haruspex/haruspex/"
license = "MIT"
keywords = ["reverse-engineering", "binary-file", "vuln-dev", "ida", "idalib"]
categories = ["command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", "tests/*"]

[dependencies]
idalib = "0.5"
anyhow = "1.0"
thiserror = "2.0"

[build-dependencies]
idalib-build = "0.5"

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
significant_drop_tightening = "allow"

[lints.rust]
missing_docs = { level = "warn" }

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
strip = true
# opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
